# docassemblecli3

./: .gitignore  LICENSE  LICENSE.txt  README.md  docassemblecli3.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docassemblecli3/: __init__.py  __main__.py  docassemblecli3.py
